tests/baselines/reference/stringLiteralTypesOverloads02.errors.txt
stringLiteralTypesOverloads02.ts(33,7): error TS2859: The type of this declaration is ambiguous and may be observed as either 'string' or '"string" | "number"'.
stringLiteralTypesOverloads02.ts(34,7): error TS2859: The type of this declaration is ambiguous and may be observed as either 'string' or '"string" | "boolean"'.
stringLiteralTypesOverloads02.ts(35,7): error TS2859: The type of this declaration is ambiguous and may be observed as either 'string' or '"number" | "boolean"'.
stringLiteralTypesOverloads02.ts(36,7): error TS2859: The type of this declaration is ambiguous and may be observed as either 'string' or '"string" | "number" | "boolean"'.


==== stringLiteralTypesOverloads02.ts (4 errors) ====
    function getFalsyPrimitive(x: "string"): string;
    function getFalsyPrimitive(x: "number"): number;
    function getFalsyPrimitive(x: "boolean"): boolean;
    function getFalsyPrimitive(x: "boolean" | "string"): boolean | string;
    function getFalsyPrimitive(x: "boolean" | "number"): boolean | number;
    function getFalsyPrimitive(x: "number" | "string"): number | string;
    function getFalsyPrimitive(x: "number" | "string" | "boolean"): number | string | boolean;
    function getFalsyPrimitive(x: string): string | number | boolean {
        if (x === "string") {
            return "";
        }
        if (x === "number") {
            return 0;
        }
        if (x === "boolean") {
            return false;
        }
    
        // Should be unreachable.
        throw "Invalid value";
    }
    
    namespace Consts1 {
        const EMPTY_STRING = getFalsyPrimitive("string");
        const ZERO = getFalsyPrimitive('number');
        const FALSE = getFalsyPrimitive("boolean");
    }
    
    const string = "string"
    const number = "number"
    const boolean = "boolean"
    
    const stringOrNumber = string || number;
          ~~~~~~~~~~~~~~
!!! error TS2859: The type of this declaration is ambiguous and may be observed as either 'string' or '"string" | "number"'.
    const stringOrBoolean = string || boolean;
          ~~~~~~~~~~~~~~~
!!! error TS2859: The type of this declaration is ambiguous and may be observed as either 'string' or '"string" | "boolean"'.
    const booleanOrNumber = number || boolean;
          ~~~~~~~~~~~~~~~
!!! error TS2859: The type of this declaration is ambiguous and may be observed as either 'string' or '"number" | "boolean"'.
    const stringOrBooleanOrNumber = stringOrBoolean || number;
          ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2859: The type of this declaration is ambiguous and may be observed as either 'string' or '"string" | "number" | "boolean"'.
    
    namespace Consts2 {
        const EMPTY_STRING = getFalsyPrimitive(string);
        const ZERO = getFalsyPrimitive(number);
        const FALSE = getFalsyPrimitive(boolean);
    
        const a = getFalsyPrimitive(stringOrNumber);
        const b = getFalsyPrimitive(stringOrBoolean);
        const c = getFalsyPrimitive(booleanOrNumber);
        const d = getFalsyPrimitive(stringOrBooleanOrNumber);
    }
    
    
    